--- a/package.json
+++ b/package.json
@@ -1,8 +1,9 @@
 {
   "devDependencies": {
     "@primer/css": "^18.0.2",
-    "katex": "^0.13.18",
+    "clean-css-cli": "^5.4.2",
+    "katex": "^0.13.20",
     "less": "^4.1.2",
-    "sass": "^1.43.2"
+    "sass": "^1.43.4"
   }
 }
